<resources>
    <string name="app_name">Weather App</string>

    <string name="humidity">Humidity</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="created_by">Created By</string>
    <string name="wind">Wind</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="max_temp_05_05_pm">Max Temp: 05:05 PM</string>
    <string name="min_temp_05_05_am">Min Temp: 05:05 AM</string>


    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
</resources>